# ubuntu-rivendell-installer

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  PACKAGE_VERSION  README  autogen.sh  build_debs.sh.in  configure.ac
assets/: 50-default.conf.patch  90-rivendell.cnf  90-rivendell.conf  Makefile.am  asound.conf  auto.misc.client_template  docbook5.sh  mysqld.cnf-patch  rd.conf-sample  samba_shares.conf
debian/: Makefile.am  Makefile.in  changelog  changelog.src  control  copyright  rules
debian/source/: Makefile.am  Makefile.in
docs/: Makefile.am  index.xml  mint21_cleanups.txt  steps.txt
repo/: Makefile.repo  README  install_rivendell.sh  install_rivendell_devel.sh  sanity_check.sh
scripts/: Makefile.am  install_rivendell.sh  install_rivendell_devel.sh  installer_install_rivendell.sh
