## Makefile.am
##
## common/Makefile.am for the ubuntu-rivendell-installer package.
##
##   (C) Copyright 2021-2022 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = 50-default.conf.patch\
             90-rivendell.cnf\
             asound.conf\
             auto.misc.template\
             auto.misc.client_template\
             auto.rd.audiostore.template\
             docbook5.sh\
             paravel_support.pdf\
             rdairplay_skin.png\
             rdpanel_skin.png\
             samba_shares.conf\
             xfce-config.tgz

CLEANFILES = *~

MAINTAINERCLEANFILES = *~\
                       Makefile.in
